--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Empowering accessibility through voice & vision"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jax>=0.5.3 ; sys_platform != 'darwin'",
+    "jax-metal>=0.1.1 ; sys_platform == 'darwin'",
     "mediapipe>=0.10.21",
     "numpy>=1.26.4",
     "opencv-python>=4.11.0.86",
