--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=1.26.4",
     "opencv-python>=4.11.0.86",
     "pip>=25.0.1",
+    "psutil>=7.0.0",
     "pyaudio>=0.2.14",
     "pyautogui>=0.9.54",
     "pyside6>=6.8.2.1",
